# DATA_ENGINEERING_AGENT_HACKATHON

./: README.md
backend/: .env  database.py  main.py  pyproject.toml  test_pipeline.py
backend/app/agents/: __init__.py  ci_orchestrator_agent.py  data_cleaning_orchestrator_agent.py  data_orchestrator_agent.py  eda_orchestrator_agent.py  fe_orchestrator_agent.py  fo_orchestrator_agent.py  ht_orchestrator_agent.py  master_orchestrator.py  me_orchestrator_agent.py  ms_orchestrator_agent.py  mt_orchestrator_agent.py  scaling_orchestrator_agent.py
backend/app/agents/ci/: __init__.py  ci_analyzer_agent.py  ci_executor_agent.py  ci_strategist_agent.py
backend/app/agents/datacleaning_agent/: __init__.py  analyzer_agent.py  executor_agent.py  strategist_agent.py
backend/app/agents/eda_agent/: __init__.py  analyzer_agent.py  executor_agent.py  strategist_agent.py
backend/app/agents/fe_agent/: __init__.py  analyzer_agent.py  executor_agent.py  strategist_agent.py
backend/app/agents/final_output_agent/: __init__.py  executor_agent.py
backend/app/agents/hyperparameter_tuning_agent/: __init__.py  (+3 more)
backend/app/api/: __init__.py  analyze.py  clean.py  clean_direct.py  pipeline.py  strategize.py
backend/app/tools/: __init__.py  analysis_tools.py  ci_analysis_tools.py  content_guardrail.py  eda_analysis_tools.py  executor_tools.py  fe_analysis_tools.py  fo_tools.py  scaling_analysis_tools.py  strategy_tools.py
backend/models/: __init__.py  dataset.py
backend/routers/: import_data.py
backend/schemas/: __init__.py  dataset.py
backend/services/: data_import.py
(+29 files in other folders)
