[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.2",
    "google-adk>=1.28.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "python-multipart>=0.0.9",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "psycopg2-binary>=2.9.0",
    "pymysql>=1.1.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.2.2",
]
